# kubernetes-mcp

./: .dockerignore  .editorconfig  .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecards.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml
deploy/manifests/: deployment.yaml  namespace.yaml  rbac.yaml  secret.yaml
deploy/proxy/: k8s-api-proxy.yaml
docs/: ARCHITECTURE.md  OPEN_SOURCE_READINESS.md  TOOL_EFFICIENCY.md
proxy/: .gitignore  Dockerfile  go.mod  main.go
src/: __init__.py  __main__.py  config.py  models.py  server.py
src/connectors/: cluster.py
src/prompts/: k8s_prompts.py
src/resources/: cluster_resources.py
src/tools/: efficient_ops.py  k8s_ops.py  rca.py  self_heal.py
tests/: test_connector.py  test_custom_resources.py  test_e2e_openshift.py  test_efficient_ops.py  test_kind_to_plural.py  test_live_kubeconfig.py  test_live_openshift.py  test_live_proxy.py  test_live_tools.py  test_mcp_integration.py  test_server.py
